fixed: missing line-breaks in posts
accidentally removed them

--- a/brunch/src/app/styles/stream.styl
+++ b/brunch/src/app/styles/stream.styl
@@ -332,6 +332,7 @@
       width 40px
       border-radius 2px
   .postcontent
+    white-space pre-wrap
     word-wrap break-word
   section.newTopic
     padding 13px 13px 12px 51px
